* Fri May 04 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.3.4-0
- Added and updated ssh::server::conf entries for DISA STIG
 
* Mon Apr 30 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.4-0
- Added 'svckill::mode' to be 'enforcing' in STIG and 800-53 modes

* Fri Apr 27 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.4-0
- Fixed the inappropriate value of useradd::useradd::inactive in
  the DISA STIG profiles.  It is now set to 0.

* Fri Mar 30 2018 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.4-0
- Update PAM settings in the `disa_stig` profile
- Fixed issues with the compliance_map logic that were causing false results to
  be added to the 'documented_missing_parameters' and
  'documented_missing_resources' lists

* Tue Mar 06 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.3-0
- Updated TMOUT setting in /etc/profile.d/simp.sh to match EL7 STIG
  setting (Reference: RHEL-07-040160)
- Added missing audispd program to simp_rsyslog::default_logs
- Added missing ' IPT:' message start to simp_ryslog::default_logs.
  This is required for iptables violation messages because some
  versions of rsyslog add a space separating the message
  timestamp/id and the message.

* Wed Dec 13 2017 Nick Markowski <nicholas.markowski@onyxpoint.com> - 2.3.3-0
- Further aligned the EL7 disa_stig profile with scap-security-guide 0.1.33-5
  - Added oval-ids to map puppet parameters to openscap tests and SIMP
    remediations.  Note this mapping is NOT complete.
- See simp/doc for a policy evaluation response report for CentOS 7
  - Includes remedies and justifications to address failures in
    the openscap scan

* Wed Nov 15 2017 Trevor Vaughan <tvaughan@onyxpoint.com> - 2.3.3-0
- Aligned the EL7 disa_stig profile with the latest SSG content
- Fixed several parameters with incorrect data types

* Mon Oct 03 2017 Dylan Cochran <dylan.cochran@onyxpoint.com> - 2.3.2-0
- Fix discrepancies between NIST and DISA compliance profiles
