@@ -1162,6 +1162,22 @@
         ],
         "value": 0
       },
+      "simp::sysctl::net__ipv4__conf__default__accept_source_route": {
+        "identifiers": [
+          "RHEL-07-040620",
+          "SRG-OS-000480-GPOS-00227",
+          "CCI-000366"
+        ],
+        "value": 0
+      },
+      "simp::sysctl::net__ipv4__conf__default__send_redirects": {
+        "identifiers": [
+          "RHEL-07-040650",
+          "SRG-OS-000480-GPOS-00227",
+          "CCI-000366"
+        ],
+        "value": 0
+      },
       "simp::sysctl::net__ipv4__icmp_echo_ignore_broadcasts": {
         "identifiers": [
           "RHEL-07-040870",
@@ -1177,6 +1193,14 @@
           "CCI-000366"
         ],
         "value": 1
+      },
+      "simp::sysctl::net__ipv6__conf__all__accept_source_route": {
+        "identifiers": [
+          "RHEL-07-040830",
+          "SRG-OS-000480-GPOS-00227",
+          "CCI-000366"
+        ],
+        "value": 0
       },
       "simp::yum::enable_auto_updates": {
         "identifiers": [
