@@ -1,3 +1,9 @@
+* Wed May 16 2018 Liz Nemsick <lnemsick.simp@gmail.com> - 2.3.4-0
+- Added simp::sysctl entries to the DISA STIG profiles for
+  net.ipv4.conf.default.accept_source_route,
+  net.ipv4.conf.default.send_redirects, and
+  net.ipv6.conf.all.accept_source_route.
+
 * Fri May 04 2018 Jeanne Greulich <jeanne.greulich@onyxpoint.com> - 2.3.4-0
 - Added and updated ssh::server::conf entries for DISA STIG
  
